index html plus css

--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Sanja Plazonić</h1>
-    <p>Frontend Developer, based in Croatia.</p>
-    <i class="fa-brands fa-instagram"></i>
-    <i class="fa-brands fa-facebook"></i>
+    <div class="hero">
+      <p>👋 Hello I'm</p>
+      <h1>Sanja Plazonić</h1>
+      <h2 class="mb-5">Front-end developer based in Zagreb</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
