--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       src="https://kit.fontawesome.com/676b63dcf0.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Homepage</title>
   </head>
   <body>
     <div class="hero">
