--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h1>Sanja Plazonić</h1>
       <h2 class="mb-5">Front-end developer based in Zagreb</h2>
       <div>
-        <a href="/work.html" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <div class="container">
