Navbar on index page

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       src="https://kit.fontawesome.com/676b63dcf0.js"
       crossorigin="anonymous"
     ></script>
-    <title>Work</title>
+    <title>Contact</title>
   </head>
   <body>
     <div class="content-container container">
