--- a/index.html
+++ b/index.html
@@ -26,9 +26,35 @@
       src="https://kit.fontawesome.com/676b63dcf0.js"
       crossorigin="anonymous"
     ></script>
-    <title>Homepage</title>
+    <title>Home</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="/img/logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="/img/logo_small.png"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+          <ul>
+            <li class="active">
+              <a href="/index.html">Home</a>
+            </li>
+            <li>
+              <a href="/about.html">About</a>
+            </li>
+            <li>
+              <a href="/work.html">Work</a>
+            </li>
+            <li>
+              <a href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </a>
+      </nav>
+    </div>
     <div class="hero">
       <p>👋 Hello I'm</p>
       <h1>Sanja Plazonić</h1>
