--- a/index.html
+++ b/index.html
@@ -118,6 +118,37 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mt-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-4">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a href="mailto:sanja.plazonic@gmail.com" class="email-link mt-5"
+            >sanja.plazonic@gmail.com</a
+          >
+        </div>
+        <div class="social-links mt-5">
+          <div class="d-flex justify-content-center mb-5">
+            <a href="https:/instagram.com" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https:/github.com" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a href="https:/facebook.com" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
