--- a/index.html
+++ b/index.html
@@ -26,30 +26,38 @@
       src="https://kit.fontawesome.com/676b63dcf0.js"
       crossorigin="anonymous"
     ></script>
-    <title>Home</title>
+    <meta
+      name="description"
+      content="Sanja is an front-end engineer bases in Zagreb"
+    />
+    <title>Front-end developer - Sanja Plazonić</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="/img/logo.png" class="logo d-none d-md-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="/img/logo.png"
+            class="logo d-none d-md-block"
+            alt="Sanja logo"
+          />
           <img
             src="/img/logo_small.png"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Sanja logo"
           />
           <ul>
             <li class="active">
-              <a href="/index.html">Home</a>
+              <a href="/" title="Homepage">Home</a>
             </li>
             <li>
-              <a href="/about.html">About</a>
+              <a href="/about.html" title="About page">About</a>
             </li>
             <li>
-              <a href="/work.html">Work</a>
+              <a href="/work.html" title="Work page Sanja">Work</a>
             </li>
             <li>
-              <a href="/contact.html">Contact</a>
+              <a href="/contact.html" title="Contact page Sanja">Contact</a>
             </li>
           </ul>
         </a>
@@ -69,7 +77,11 @@
       </p>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="/img/Dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="/img/Dictionary.png"
+            class="img-fluid"
+            alt="Dictionary photo"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -80,7 +92,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">View detail project</a>
+            <a href="/work.html" class="btn btn-branding-outline"
+              >View detail project</a
+            >
           </div>
         </div>
       </div>
@@ -94,16 +108,26 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">View detail project</a>
+            <a href="/work.html" class="btn btn-branding-outline"
+              >View detail project</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="/img/weather.png" class="img-fluid" alt="" />
+          <img
+            src="/img/weather.png"
+            class="img-fluid"
+            alt="Weather project preview"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="/img/dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="/img/dictionary.png"
+            class="img-fluid"
+            alt="Dictionary project preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -114,7 +138,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">View detail project</a>
+            <a href="/work.html" class="btn btn-branding-outline"
+              >View detail project</a
+            >
           </div>
         </div>
       </div>
@@ -127,7 +153,12 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-4">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-4"
+              title="Contact me"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center">
@@ -137,17 +168,29 @@
         </div>
         <div class="social-links mt-5">
           <div class="d-flex justify-content-center mb-5">
-            <a href="https:/instagram.com" target="_blank"
+            <a
+              href="https:/instagram.com"
+              target="_blank"
+              title="Instagram profile"
               ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="https:/github.com" target="_blank"
+            <a href="https:/github.com" target="_blank" target="Hithub profile"
               ><i class="fa-brands fa-github"></i
             ></a>
-            <a href="https:/facebook.com" target="_blank"
+            <a
+              href="https:/facebook.com"
+              target="_blank"
+              tile="Facebook profile"
               ><i class="fa-brands fa-facebook"></i
             ></a>
           </div>
         </div>
+        <p class="text-center mt-4">
+          This project was coded by Sanja, and it is
+          <a href="https://github.com/NjaSa58/portfolio-project" target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
