--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,36 @@
     <title>Contact</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="/img/logo.png"
+            class="logo d-none d-md-block"
+            alt="Sanja logo"
+          />
+          <img
+            src="/img/logo_small.png"
+            class="logo d-block d-md-none"
+            alt="Sanja logo"
+          />
+          <ul>
+            <li>
+              <a href="/" title="Homepage">Home</a>
+            </li>
+            <li>
+              <a href="/about.html" title="About page">About</a>
+            </li>
+            <li>
+              <a href="/work.html" title="Work page Sanja">Work</a>
+            </li>
+            <li class="active">
+              <a href="/contact.html" title="Contact page Sanja">Contact</a>
+            </li>
+          </ul>
+        </a>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-4">Let's get in touch!</h1>
@@ -50,6 +80,54 @@
           >
         </p>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mt-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-4"
+              title="Contact me"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a href="mailto:sanja.plazonic@gmail.com" class="email-link mt-5"
+            >sanja.plazonic@gmail.com</a
+          >
+        </div>
+        <div class="social-links mt-5">
+          <div class="d-flex justify-content-center mb-5">
+            <a
+              href="https:/instagram.com"
+              target="_blank"
+              title="Instagram profile"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https:/github.com" target="_blank" target="Hithub profile"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a
+              href="https:/facebook.com"
+              target="_blank"
+              tile="Facebook profile"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </div>
+        </div>
+        <p class="text-center mt-4">
+          This project was coded by Sanja, and it is
+          <a href="https://github.com/NjaSa58/portfolio-project" target="_blank"
+            >open-sourced</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
