--- a/work.html
+++ b/work.html
@@ -29,34 +29,128 @@
     <title>Work</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="/img/logo.png"
+            class="logo d-none d-md-block"
+            alt="Sanja logo"
+          />
+          <img
+            src="/img/logo_small.png"
+            class="logo d-block d-md-none"
+            alt="Sanja logo"
+          />
+          <ul>
+            <li>
+              <a href="/" title="Homepage">Home</a>
+            </li>
+            <li>
+              <a href="/about.html" title="About page">About</a>
+            </li>
+            <li class="active">
+              <a href="/work.html" title="Work page Sanja">Work</a>
+            </li>
+            <li>
+              <a href="/contact.html" title="Contact page Sanja">Contact</a>
+            </li>
+          </ul>
+        </a>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-4">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-5">
-            <img src="/img/yogurt_work.png" alt="" class="img-fluid" />
+            <img
+              src="/img/yogurt_work.png"
+              alt="Yogurt photo"
+              class="img-fluid"
+            />
             <h3 class="text-center">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-5">
-            <img src="/img/weather_work.png" alt="" class="img-fluid" />
+            <img
+              src="/img/weather_work.png"
+              alt="Weather photo"
+              class="img-fluid"
+            />
             <h3 class="text-center">Weather App</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS and JavaScript
             </p>
           </div>
           <div class="col-md-6 mb-5">
-            <img src="/img/dictionary_work.png" alt="" class="img-fluid" />
+            <img
+              src="/img/dictionary_work.png"
+              alt="Dictionary photo"
+              class="img-fluid"
+            />
             <h3 class="text-center">Dictionary</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
           </div>
           <div class="col-md-6 mb-5">
-            <img src="/img/translation_work.png" alt="" class="img-fluid" />
+            <img
+              src="/img/translation_work.png"
+              alt="Translation photo"
+              class="img-fluid"
+            />
             <h3 class="text-center">Translation</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
           </div>
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mt-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-4"
+              title="Contact me"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a href="mailto:sanja.plazonic@gmail.com" class="email-link mt-5"
+            >sanja.plazonic@gmail.com</a
+          >
+        </div>
+        <div class="social-links mt-5">
+          <div class="d-flex justify-content-center mb-5">
+            <a
+              href="https:/instagram.com"
+              target="_blank"
+              title="Instagram profile"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https:/github.com" target="_blank" target="Hithub profile"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a
+              href="https:/facebook.com"
+              target="_blank"
+              tile="Facebook profile"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </div>
+        </div>
+        <p class="text-center mt-4">
+          This project was coded by Sanja, and it is
+          <a href="https://github.com/NjaSa58/portfolio-project" target="_blank"
+            >open-sourced</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
