--- a/about.html
+++ b/about.html
@@ -108,16 +108,19 @@
         <div class="social-links mt-5">
           <div class="d-flex justify-content-center mb-5">
             <a
-              href="https:/instagram.com"
+              href="https/www.instagram.com"
               target="_blank"
               title="Instagram profile"
               ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="https:/github.com" target="_blank" target="Hithub profile"
+            <a
+              href="https/www.github.com"
+              target="_blank"
+              target="Hithub profile"
               ><i class="fa-brands fa-github"></i
             ></a>
             <a
-              href="https:/facebook.com"
+              href="https/www.facebook.com"
               target="_blank"
               tile="Facebook profile"
               ><i class="fa-brands fa-facebook"></i
